--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "autoprefixer": "10.4.14",
     "framer-motion": "^10.12.12",
-    "next": "13.4.2",
+    "next": "^15.1.3",
     "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-icons": "^4.8.0",
     "tailwindcss": "3.3.2"
   }
