--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "froot_emporium",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "autoprefixer": "10.4.14",
-    "framer-motion": "^10.12.12",
-    "next": "^15.1.3",
-    "postcss": "8.4.23",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-icons": "^4.8.0",
-    "tailwindcss": "3.3.2"
-  }
+	"name": "froot_emporium",
+	"version": "0.1.0",
+	"private": true,
+	"proxy": "localhost:3000",
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"autoprefixer": "10.4.14",
+		"motion": "^11.16.0",
+		"next": "^15.1.3",
+		"postcss": "8.4.23",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"react-icons": "^4.8.0",
+		"tailwindcss": "3.3.2"
+	}
 }
