--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@radix-ui/react-slot": "^1.1.1",
 		"autoprefixer": "10.4.14",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.471.1",
 		"motion": "^11.16.0",
 		"next": "^15.1.3",
 		"postcss": "8.4.23",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-icons": "^4.8.0",
-		"tailwindcss": "3.3.2"
+		"tailwind-merge": "^2.6.0",
+		"tailwindcss": "3.3.2",
+		"tailwindcss-animate": "^1.0.7"
 	}
 }
